--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/logo.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panelic - Seamless Control</title>
+    <link href="/src/assets/main.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
